src/test/ui/type-alias-impl-trait/generic_nondefining_use.stderr
error: at least one trait must be specified
  --> $DIR/generic_nondefining_use.rs:5:15
   |
LL | type Cmp<T> = impl 'static;
   |               ^^^^^^^^^^^^

error: defining opaque type use does not fully define opaque type: generic parameter `T` is specified as concrete type `u32`
  --> $DIR/generic_nondefining_use.rs:10:1
   |
LL | / fn cmp() -> Cmp<u32> {
LL | |     5u32
LL | | }
   | |_^

error: aborting due to 2 previous errors

